--- a/index.html
+++ b/index.html
@@ -2,10 +2,24 @@
 <html ng-app="store">
 
   <head>
-    <link rel="stylesheet" type="text.css" href="bootstrap.min.css">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   </head>
 
   <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+
+          <div ng-controller="StoreController as store" >
+            <h1> {{store.product.name}} </h1>
+            <h2> ${{store.product.price}} </h2>
+            <p> {{store.product.description}} </p>
+          </div>
+
+        </div>
+      </div>
+    </div>
 
     <script type="text/javascript" src="angular.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
