--- a/index.html
+++ b/index.html
@@ -2,23 +2,16 @@
 <html ng-app="store">
 
   <head>
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   </head>
 
-  <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4">
+  <body ng-controller="StoreController as store">
 
-          <div ng-controller="StoreController as store" >
-            <h1> {{store.product.name}} </h1>
-            <h2> ${{store.product.price}} </h2>
-            <p> {{store.product.description}} </p>
-          </div>
-
-        </div>
-      </div>
+    <div class="container" ng-hide="store.product.soldOut">
+      <h1> {{store.product.name}} </h1>
+      <h2> ${{store.product.price}} </h2>
+      <p> {{store.product.description}} </p>
+      <button ng-show="store.product.canPurchase">Add to Cart</button>
     </div>
 
     <script type="text/javascript" src="angular.min.js"></script>
