--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <li class="list-group-item" ng-repeat="product in store.products" ng-hide="store.product.soldOut">
           <h3>
             {{product.name}}
-            <em class="pull-right">${{product.price}}</em>
+            <em class="pull-right">{{product.price | currency}}</em>
           </h3>
           <p>{{product.description}}</p>
           <button ng-show="product.canPurchase">Add to Cart</button>
