display full product images

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <em class="pull-right">{{product.price | currency}}</em>
           </h3>
           <p>{{product.description}}</p>
-          <button ng-show="product.canPurchase">Add to Cart</button>
+          <img ng-src="{{product.images[0].full}}" />
+          <button class="pull-right" ng-show="product.canPurchase">Add to Cart</button>
         </li>
       </ul>
 
