--- a/index.html
+++ b/index.html
@@ -13,9 +13,30 @@
             {{product.name}}
             <em class="pull-right">{{product.price | currency}}</em>
           </h3>
-          <p>{{product.description}}</p>
           <img ng-src="{{product.images[0].full}}" />
           <button class="pull-right" ng-show="product.canPurchase">Add to Cart</button>
+
+          <section ng-init="tab = 1">
+            <ul class="nav nav-pills">
+              <li><a href ng-click="tab = 1">Description</a></li>
+              <li><a href ng-click="tab = 2">Specifications</a></li>
+              <li><a href ng-click="tab = 3">Reviews</a></li>
+            </ul>
+
+            <div class=panel ng-show="tab === 1">
+              <h4>Description</h4>
+              <p>{{product.description}}</p>
+            </div>
+            <div class=panel ng-show="tab === 2">
+              <h4>Specifications</h4>
+              <blockquote>None yet</blockquote>
+            </div>
+            <div class=panel ng-show="tab === 3">
+              <h4>Reviews</h4>
+              <blockquote>None yet</blockquote>
+            </div>
+          </section>
+
         </li>
       </ul>
 
