--- a/index.html
+++ b/index.html
@@ -7,44 +7,62 @@
 
   <body ng-controller="StoreController as store">
 
-      <ul class="list-group">
-        <li class="list-group-item" ng-repeat="product in store.products" ng-hide="store.product.soldOut">
-          <h3>
-            {{product.name}}
-            <em class="pull-right">{{product.price | currency}}</em>
-          </h3>
-          <img ng-src="{{product.images[0].full}}" />
-          <button class="pull-right" ng-show="product.canPurchase">Add to Cart</button>
+    <header>
+      <h1 class="text-center">Flatlander Crafted Gems</h1>
+      <h2 class="text-center">- an Angular store -</h2>
+    </header>
 
-          <section ng-controller="PanelController as panel">
-            <ul class="nav nav-pills">
-              <li ng-class="{ active: panel.isSelected(1) }">
-                <a href ng-click="panel.selectTab(1)">Description</a>
-              </li>
-              <li ng-class="{ active: panel.isSelected(2) }">
-                <a href ng-click="panel.selectTab(2)">Specifications</a>
-              </li>
-              <li ng-class="{ active: panel.isSelected(3) }">
-                <a href ng-click="panel.selectTab(3)">Reviews</a>
-              </li>
-            </ul>
+    <ul class="list-group">
+      <li class="list-group-item" ng-repeat="product in store.products" ng-hide="store.product.soldOut">
+        <h3>
+          {{product.name}}
+          <em class="pull-right">{{product.price | currency}}</em>
+        </h3>
+        <img ng-src="{{product.images[0].full}}" />
+        <button class="pull-right" ng-show="product.canPurchase">Add to Cart</button>
 
-            <div class=panel ng-show="panel.isSelected(1)">
-              <h4>Description</h4>
-              <p>{{product.description}}</p>
-            </div>
-            <div class=panel ng-show="panel.isSelected(2)">
-              <h4>Specifications</h4>
-              <blockquote>None yet</blockquote>
-            </div>
-            <div class=panel ng-show="panel.isSelected(3)">
-              <h4>Reviews</h4>
-              <blockquote>None yet</blockquote>
-            </div>
-          </section>
+        <!-- Image Gallery -->
+        <!-- <div class='gallery' ng-controller="GalleryController as gallery" ng-show="product.images.length">
+          <div class="image-wrap">
+            <img ng-src="{{product.images[gallery.current]}}" />
+          </div>
+          <ul>
+            <li class="small-image pull-left thumbnail" ng-repeat="image in product.images">
+              <img ng-src="{{image}}"/>
+            </li>
+          </ul>
+        </div> -->
 
-        </li>
-      </ul>
+        <!-- Product Tabs -->
+        <section ng-controller="PanelController as panel">
+          <ul class="nav nav-pills">
+            <li ng-class="{ active: panel.isSelected(1) }">
+              <a href ng-click="panel.selectTab(1)">Description</a>
+            </li>
+            <li ng-class="{ active: panel.isSelected(2) }">
+              <a href ng-click="panel.selectTab(2)">Specifications</a>
+            </li>
+            <li ng-class="{ active: panel.isSelected(3) }">
+              <a href ng-click="panel.selectTab(3)">Reviews</a>
+            </li>
+          </ul>
+
+          <div class=panel ng-show="panel.isSelected(1)">
+            <h4>Description</h4>
+            <p>{{product.description}}</p>
+          </div>
+          <div class=panel ng-show="panel.isSelected(2)">
+            <h4>Specifications</h4>
+            <blockquote>None yet</blockquote>
+          </div>
+          <div class=panel ng-show="panel.isSelected(3)">
+            <h4>Reviews</h4>
+            <blockquote>None yet</blockquote>
+          </div>
+        </section>
+
+      </li>
+    </ul>
 
     <script type="text/javascript" src="angular.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
