--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
         <!-- Product Tabs -->
         <section ng-controller="PanelController as panel">
+
           <ul class="nav nav-pills">
             <li ng-class="{ active: panel.isSelected(1) }">
               <a href ng-click="panel.selectTab(1)">Description</a>
@@ -49,18 +50,64 @@
 
           <div class=panel ng-show="panel.isSelected(1)">
             <h4>Description</h4>
-            <p>{{product.description}}</p>
+            <blockquote>{{product.description}}</blockquote>
           </div>
+
           <div class=panel ng-show="panel.isSelected(2)">
             <h4>Specifications</h4>
             <blockquote>None yet</blockquote>
           </div>
-          <div class=panel ng-show="panel.isSelected(3)">
-            <h4>Reviews</h4>
-            <blockquote>None yet</blockquote>
-          </div>
-        </section>
 
+          <!-- Review Tab's Content -->
+          <div class=panel ng-show="panel.isSelected(3)">
+            <!-- Product Reviews List -->
+            <ul>
+              <h4>Reviews</h4>
+              <li ng-repeat="review in product.reviews">
+                <blockquote>
+                  <strong>Stars: {{review.stars}}</strong>
+                  "{{review.body}}"
+                  <cite class="clearfix">-{{review.author}}</cite>
+                </blockquote>
+              </li>
+            </ul>
+
+            <!-- Create Review-->
+            <form name="reviewForm">
+              <!-- Live Preview -->
+              <blockquote>
+                <strong>Stars: {{review.stars}}</strong>
+                "{{review.body}}"
+                <cite class="clearfix">-{{review.author}}</cite>
+              </blockquote>
+
+              <!-- Review Form -->
+              <h4>Submit a Review</h4>
+              <fieldset class="form-group">
+                <!-- <select ng-modal="review.stars" class="form-control" title="Stars"> -->
+                <select ng-modal="review.stars" class="form-control" ng-options="stars for stars in [5,4,3,2,1]" title="Stars">
+                  <option value="">Rate the Product</option>
+                  <!-- <option value="1">1 star</option>
+                  <option value="2">2 stars</option>
+                  <option value="3">3 stars</option>
+                  <option value="4">4 stars</option>
+                  <option value="5">5 stars</option> -->
+                </select>
+              </fieldset>
+              <fieldset class="form-group">
+                <textarea ng-modal="review.body" class="form-control" placeholder="Write a short review of the product..." title="Review"></textarea>
+              </fieldset>
+              <fieldset class="form-group">
+                <input ng-model="review.author" type="email" class="form-control" placeholder="johndoe@example.com" title="Email"/>
+              <fieldset/>
+              <fieldset class="form-group">
+                <input type="submit" class="btn btn-primary pull-right" value="Submit Review"/>
+              <fieldset/>
+            </form>
+
+          </div>
+
+        </section>
       </li>
     </ul>
 
