--- a/index.html
+++ b/index.html
@@ -72,20 +72,21 @@
               </li>
             </ul>
 
-            <!-- Create Review-->
-            <form name="reviewForm">
+            <!-- Create Review Form-->
+            <form name="reviewForm" ng-controller="ReviewController as reviewCtrl"
+                                    ng-submit="reviewCtrl.addReview(product)">
               <!-- Live Preview -->
               <blockquote>
-                <strong>Stars: {{review.stars}}</strong>
-                "{{review.body}}"
-                <cite class="clearfix">-{{review.author}}</cite>
+                <strong>Stars: {{reviewCtrl.review.stars}}</strong>
+                "{{reviewCtrl.review.body}}"
+                <cite class="clearfix">-{{reviewCtrl.review.author}}</cite>
               </blockquote>
 
               <!-- Review Form -->
               <h4>Submit a Review</h4>
               <fieldset class="form-group">
-                <!-- <select ng-modal="review.stars" class="form-control" title="Stars"> -->
-                <select ng-modal="review.stars" class="form-control" ng-options="stars for stars in [5,4,3,2,1]" title="Stars">
+                <!-- <select ng-modal="reviewCtrl.review.stars" class="form-control" title="Stars"> -->
+                <select ng-modal="reviewCtrl.review.stars" class="form-control" ng-options="stars for stars in [5,4,3,2,1]" title="Stars">
                   <option value="">Rate the Product</option>
                   <!-- <option value="1">1 star</option>
                   <option value="2">2 stars</option>
@@ -95,10 +96,10 @@
                 </select>
               </fieldset>
               <fieldset class="form-group">
-                <textarea ng-modal="review.body" class="form-control" placeholder="Write a short review of the product..." title="Review"></textarea>
+                <textarea ng-modal="reviewCtrl.review.body" class="form-control" placeholder="Write a short review of the product..." title="Review"></textarea>
               </fieldset>
               <fieldset class="form-group">
-                <input ng-model="review.author" type="email" class="form-control" placeholder="johndoe@example.com" title="Email"/>
+                <input ng-model="reviewCtrl.review.author" type="email" class="form-control" placeholder="johndoe@example.com" title="Email"/>
               <fieldset/>
               <fieldset class="form-group">
                 <input type="submit" class="btn btn-primary pull-right" value="Submit Review"/>
