--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html ng-app="store">
 
   <head>
+    <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   </head>
 
@@ -74,7 +75,7 @@
 
             <!-- Create Review Form-->
             <form name="reviewForm" ng-controller="ReviewController as reviewCtrl"
-                                    ng-submit="reviewCtrl.addReview(product)">
+                                    ng-submit="reviewForm.$valid && reviewCtrl.addReview(product)" novalidate>
               <!-- Live Preview -->
               <blockquote>
                 <strong>Stars: {{reviewCtrl.review.stars}}</strong>
@@ -85,22 +86,17 @@
               <!-- Review Form -->
               <h4>Submit a Review</h4>
               <fieldset class="form-group">
-                <!-- <select ng-modal="reviewCtrl.review.stars" class="form-control" title="Stars"> -->
-                <select ng-model="reviewCtrl.review.stars" class="form-control" ng-options="stars for stars in [5,4,3,2,1]" title="Stars">
+                <select ng-model="reviewCtrl.review.stars" class="form-control" ng-options="stars for stars in [5,4,3,2,1]" title="Stars" required >
                   <option value="">Rate the Product</option>
-                  <!-- <option value="1">1 star</option>
-                  <option value="2">2 stars</option>
-                  <option value="3">3 stars</option>
-                  <option value="4">4 stars</option>
-                  <option value="5">5 stars</option> -->
                 </select>
               </fieldset>
               <fieldset class="form-group">
-                <textarea ng-model="reviewCtrl.review.body" class="form-control" placeholder="Write a short review of the product..." title="Review"></textarea>
+                <textarea name="body" ng-model="reviewCtrl.review.body" class="form-control" placeholder="Write a short review of the product..." title="Review" required ></textarea>
               </fieldset>
               <fieldset class="form-group">
-                <input ng-model="reviewCtrl.review.author" type="email" class="form-control" placeholder="johndoe@example.com" title="Email"/>
+                <input name="author" ng-model="reviewCtrl.review.author" type="email" class="form-control" placeholder="johndoe@example.com" title="Email" required />
               <fieldset/>
+              <div> Valid Form: {{reviewForm.$valid}} </div>
               <fieldset class="form-group">
                 <input type="submit" class="btn btn-primary pull-right" value="Submit Review"/>
               <fieldset/>
@@ -112,7 +108,7 @@
       </li>
     </ul>
 
-    <script type="text/javascript" src="angular.min.js"></script>
+    <script type="text/javascript" src="scripts/angular.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
 
   </body>
