--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
 
     <ul class="list-group">
       <li class="list-group-item" ng-repeat="product in store.products" ng-hide="store.product.soldOut">
-        <h3>
-          {{product.name}}
-          <em class="pull-right">{{product.price | currency}}</em>
-        </h3>
+        <h3 ng-include="'product-title.html'"></h3>
         <img ng-src="{{product.images[0].full}}" />
         <button class="pull-right" ng-show="product.canPurchase">Add to Cart</button>
 
