replace product-gallery section with custom element directive; move product-gallery to product-gallery.html

--- a/index.html
+++ b/index.html
@@ -20,16 +20,7 @@
         <button class="pull-right" ng-show="product.canPurchase">Add to Cart</button>
 
         <!-- Image Gallery -->
-        <!-- <div class='gallery' ng-controller="GalleryController as gallery" ng-show="product.images.length">
-          <div class="image-wrap">
-            <img ng-src="{{product.images[gallery.current]}}" />
-          </div>
-          <ul>
-            <li class="small-image pull-left thumbnail" ng-repeat="image in product.images">
-              <img ng-src="{{image}}"/>
-            </li>
-          </ul>
-        </div> -->
+        <!-- <product-gallery></product-gallery> -->
 
         <!-- Product Tabs -->
         <product-panels></product-panels>
