--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
     <script type="text/javascript" src="scripts/angular.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
+    <script src="products.js"></script>
 
   </body>
 
